# roguelike-ecs

./: Cargo.toml  azure-pipelines.yml
src/: game.rs  item.rs  main.rs  map.rs  monster.rs  player.rs  tcod.rs
src/components/: ai_controlled.rs  block.rs  corpse.rs  damage.rs  equipable.rs  equipment.rs  experience.rs  fighter.rs  health.rs  inventory.rs  mod.rs  name.rs  object.rs  pickable.rs  player.rs  position.rs  renderable.rs  stairs.rs  tile.rs  usable.rs  velocity.rs
src/systems/: ai_combat.rs  ai_movement.rs  ai_velocity.rs  combat.rs  death.rs  explore.rs  mod.rs  movement.rs  player_action.rs  player_combat.rs  player_drop.rs  player_equip.rs  player_level_up.rs  player_move.rs  player_movement.rs  player_pick_up.rs  player_stairs.rs  player_use.rs  player_velocity.rs  read_keyboard.rs  render.rs  take_damage.rs
