[package]
name = "roguelike-ecs"
version = "0.1.0"
authors = ["David Morcillo <david.morcillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tcod = { version = "0.15", features = ["serialization"] }
tcod = { git = "https://github.com/tomassedovic/tcod-rs.git" }
specs = "0.18.0"
rand = "0.3.9"
